fix: overflowing sections on small screen; fix: remove demo class on block

--- a/src/layout/elements/main-section.less
+++ b/src/layout/elements/main-section.less
@@ -13,6 +13,7 @@ section,
 fieldset {
   display: flex;
   flex-wrap: wrap;
+  overflow-x: auto;
 
   & > * {
     .w-100();
